Fix text alignment in importer

--- a/frontend/src/app/+importExport/import/import.component.scss
+++ b/frontend/src/app/+importExport/import/import.component.scss
@@ -54,7 +54,6 @@
 .content {
   background-color: $ige-background;
   padding: 24px;
-  text-align: center;
 }
 
 .options {
